# udacity-robond-p5

./: LICENSE  README.md  launch.bash  launch.sh  launch.zsh
doc/: MELODIC_SETUP.md  UDACITY_WS_SETUP.md
include/: home_service_robot_common.hpp
script/kinetic/: launch.zsh
script/melodic/: launch.sh  launch.zsh
src/add_markers/: CMakeLists.txt  package.xml
src/add_markers/include/: marker_displayer.hpp  robot_dependent_marker_displayer.hpp  tracked_transport_marker_displayer.hpp  transport_marker_displayer.hpp
src/add_markers/launch/: add_markers.launch  add_markers_tracking_robot.launch
src/add_markers/src/: add_markers.cpp  marker_displayer.cpp  robot_dependent_marker_displayer.cpp  tracked_transport_marker_displayer.cpp  transport_marker_displayer.cpp
src/map/: hmap.yaml  htemp.pgm  htemp.yaml
src/pick_objects/: CMakeLists.txt  package.xml
src/pick_objects/launch/: pick_objects.launch
src/pick_objects/src/: pick_objects.cpp
src/scripts/: add_marker.bash  add_marker.sh  add_marker.zsh  home_service.bash  home_service.sh  home_service.zsh  pick_objects.bash  pick_objects.sh  pick_objects.zsh  set_environment.bash  set_environment.sh  set_environment.zsh  test_navigation.bash  test_navigation.sh  test_navigation.zsh  test_slam.bash  test_slam.sh  test_slam.zsh
src/scripts/kinetic/: launch.bash
src/scripts/melodic/: launch.bash
src/world/: home_service_robot_test.world
src/world/model/red_box/: model.sdf
